--- a/Styles/style.css
+++ b/Styles/style.css
@@ -5,16 +5,49 @@
 }
 
 body {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    max-width: 100%;
+    align-items: center; */
+    width: 100%;
     height: 100vh;
     max-height: 100vh;
+    position: relative;
+    background-color: #161f28;
+}
+
+.buttons {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+button {
+    background: transparent;
+    border: none;
+    outline: none;
+    color: #fff;
+    padding: 10px 15px;
+    border-radius: 30px;
+    font-size: 16px;
+    font-weight: bold;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #fff;
+    color: #161f28;
 }
 
 #grid-container {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 100px;
     display: grid;
     grid-template-columns: repeat(50, 30px);
     grid-template-rows: 30px;
